# 3dbfm-mvm

./: CMakeLists.txt  README.md
src/initiation/: initiation.cpp
src/reaction/: reaction.cpp
test/: initiation
